y.output
Terminals unused in grammar

   VOID
   AND
   OR
   COMMA


Rules useless in parser due to conflicts

   16 StatementList: Statement

   67 $@11: %empty

   70 $@13: %empty

   72 Forstmt: %empty


State 0 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 24 conflicts: 23 reduce/reduce
State 44 conflicts: 1 shift/reduce
State 48 conflicts: 1 reduce/reduce
State 87 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | BLOCK NEWLINE
    7          | PrintStmt NEWLINE
    8          | IfStmt NEWLINE
    9          | Forstmt NEWLINE
   10          | NEWLINE

   11 DeclarationStmt: VAR IDENT Type ASSIGN Expression
   12                | VAR IDENT Type

   13 $@1: %empty

   14 $@2: %empty

   15 BLOCK: LBRACE $@1 StatementList $@2 RBRACE

   16 StatementList: Statement

   17 SimpleStmt: Expression
   18           | IncDecStmt
   19           | AssignmentStmt

   20 $@3: %empty

   21 AssignmentStmt: Expression $@3 ASSIGN Expression

   22 $@4: %empty

   23 AssignmentStmt: Expression $@4 ADD_ASSIGN Expression

   24 $@5: %empty

   25 AssignmentStmt: Expression $@5 SUB_ASSIGN Expression

   26 $@6: %empty

   27 AssignmentStmt: Expression $@6 MUL_ASSIGN Expression

   28 $@7: %empty

   29 AssignmentStmt: Expression $@7 QUO_ASSIGN Expression

   30 $@8: %empty

   31 AssignmentStmt: Expression $@8 REM_ASSIGN Expression

   32 Expression: UnaryExpr
   33           | Expression ADD Expression
   34           | Expression SUB Expression
   35           | Expression MUL Expression
   36           | Expression DIV Expression
   37           | Expression REMAIN Expression
   38           | Expression EQL Expression
   39           | Expression NEQ Expression
   40           | Expression GTR Expression
   41           | Expression LSS Expression
   42           | Expression LEQ Expression
   43           | Expression GEQ Expression
   44           | Expression LAND Expression
   45           | Expression LOR Expression
   46           | LPAREN Expression RPAREN

   47 UnaryExpr: PrimaryExpr
   48          | ADD UnaryExpr
   49          | SUB UnaryExpr
   50          | NOT UnaryExpr

   51 PrimaryExpr: Operand
   52            | ConversionExpr
   53            | IndexExpr

   54 IndexExpr: PrimaryExpr LBRACK Expression RBRACK

   55 Operand: Literal
   56        | IDENT

   57 Literal: INT_LIT
   58        | FLOAT_LIT
   59        | STRING_LIT
   60        | BOOL_LIT

   61 ConversionExpr: Type LPAREN Expression RPAREN

   62 Condition: Expression

   63 $@9: %empty

   64 FBLOCK: LBRACE $@9 StatementList RBRACE

   65 $@10: %empty

   66 IfStmt: IF Condition $@10 FBLOCK

   67 $@11: %empty

   68 $@12: %empty

   69 IfStmt: IF Condition $@11 FBLOCK ELSE $@12 FBLOCK

   70 $@13: %empty

   71 IfStmt: IF Condition $@13 FBLOCK ELSE IfStmt

   72 Forstmt: %empty

   73 $@14: %empty

   74 Forstmt: FOR $@14 Formid

   75 Formid: Condition FBLOCK

   76 $@15: %empty

   77 Formid: Forclause $@15 FBLOCK

   78 $@16: %empty

   79 $@17: %empty

   80 $@18: %empty

   81 Forclause: SimpleStmt SEMICOLON $@16 Condition $@17 SEMICOLON $@18 SimpleStmt

   82 $@19: %empty

   83 PrintStmt: PRINT LPAREN $@19 Expression RPAREN

   84 $@20: %empty

   85 PrintStmt: PRINTLN LPAREN $@20 Expression RPAREN

   86 IncDecStmt: Expression INC
   87           | Expression DEC

   88 Type: TypeName
   89     | ArrayType

   90 TypeName: INT
   91         | FLOAT
   92         | STRING
   93         | BOOL

   94 ArrayType: LBRACK Expression RBRACK Type


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 11 12
INT (259) 90
FLOAT (260) 91
BOOL (261) 93
STRING (262) 92
VOID (263)
AND (264)
OR (265)
LBRACE (266) 15 64
RBRACE (267) 15 64
INC (268) 86
DEC (269) 87
ASSIGN (270) 11 21
ADD_ASSIGN (271) 23
SUB_ASSIGN (272) 25
MUL_ASSIGN (273) 27
QUO_ASSIGN (274) 29
REM_ASSIGN (275) 31
PRINT (276) 83
PRINTLN (277) 85
NEWLINE (278) 4 5 6 7 8 9 10
IF (279) 66 69 71
ELSE (280) 69 71
FOR (281) 74
SEMICOLON (282) 81
COMMA (283)
INT_LIT (284) 57
FLOAT_LIT (285) 58
STRING_LIT (286) 59
IDENT (287) 11 12 56
BOOL_LIT (288) 60
LOR (289) 45
LAND (290) 44
NEQ (291) 39
LSS (292) 41
LEQ (293) 42
GTR (294) 40
GEQ (295) 43
EQL (296) 38
ADD (297) 33 48
SUB (298) 34 49
MUL (299) 35
DIV (300) 36
REMAIN (301) 37
NOT (302) 50
LPAREN (303) 46 61 83 85
RPAREN (304) 46 61 83 85
LBRACK (305) 54 94
RBRACK (306) 54 94


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
StatementList (54)
    on left: 2 3 16, on right: 1 2 15 64
Statement (55)
    on left: 4 5 6 7 8 9 10, on right: 2 3 16
DeclarationStmt (56)
    on left: 11 12, on right: 4
BLOCK (57)
    on left: 15, on right: 6
$@1 (58)
    on left: 13, on right: 15
$@2 (59)
    on left: 14, on right: 15
SimpleStmt (60)
    on left: 17 18 19, on right: 5 81
AssignmentStmt (61)
    on left: 21 23 25 27 29 31, on right: 19
$@3 (62)
    on left: 20, on right: 21
$@4 (63)
    on left: 22, on right: 23
$@5 (64)
    on left: 24, on right: 25
$@6 (65)
    on left: 26, on right: 27
$@7 (66)
    on left: 28, on right: 29
$@8 (67)
    on left: 30, on right: 31
Expression (68)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right:
    11 17 21 23 25 27 29 31 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 54 61 62 83 85 86 87 94
UnaryExpr (69)
    on left: 47 48 49 50, on right: 32 48 49 50
PrimaryExpr (70)
    on left: 51 52 53, on right: 47 54
IndexExpr (71)
    on left: 54, on right: 53
Operand (72)
    on left: 55 56, on right: 51
Literal (73)
    on left: 57 58 59 60, on right: 55
ConversionExpr (74)
    on left: 61, on right: 52
Condition (75)
    on left: 62, on right: 66 69 71 75 81
FBLOCK (76)
    on left: 64, on right: 66 69 71 75 77
$@9 (77)
    on left: 63, on right: 64
IfStmt (78)
    on left: 66 69 71, on right: 8 71
$@10 (79)
    on left: 65, on right: 66
$@11 (80)
    on left: 67, on right: 69
$@12 (81)
    on left: 68, on right: 69
$@13 (82)
    on left: 70, on right: 71
Forstmt (83)
    on left: 72 74, on right: 9
$@14 (84)
    on left: 73, on right: 74
Formid (85)
    on left: 75 77, on right: 74
$@15 (86)
    on left: 76, on right: 77
Forclause (87)
    on left: 81, on right: 77
$@16 (88)
    on left: 78, on right: 81
$@17 (89)
    on left: 79, on right: 81
$@18 (90)
    on left: 80, on right: 81
PrintStmt (91)
    on left: 83 85, on right: 7
$@19 (92)
    on left: 82, on right: 83
$@20 (93)
    on left: 84, on right: 85
IncDecStmt (94)
    on left: 86 87, on right: 18
Type (95)
    on left: 88 89, on right: 11 12 61 94
TypeName (96)
    on left: 90 91 92 93, on right: 88
ArrayType (97)
    on left: 94, on right: 89


State 0

    0 $accept: . Program $end

    VAR         shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    LBRACE      shift, and go to state 6
    PRINT       shift, and go to state 7
    PRINTLN     shift, and go to state 8
    NEWLINE     shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    NEWLINE  [reduce using rule 72 (Forstmt)]

    Program          go to state 22
    StatementList    go to state 23
    Statement        go to state 24
    DeclarationStmt  go to state 25
    BLOCK            go to state 26
    SimpleStmt       go to state 27
    AssignmentStmt   go to state 28
    Expression       go to state 29
    UnaryExpr        go to state 30
    PrimaryExpr      go to state 31
    IndexExpr        go to state 32
    Operand          go to state 33
    Literal          go to state 34
    ConversionExpr   go to state 35
    IfStmt           go to state 36
    Forstmt          go to state 37
    PrintStmt        go to state 38
    IncDecStmt       go to state 39
    Type             go to state 40
    TypeName         go to state 41
    ArrayType        go to state 42


State 1

   11 DeclarationStmt: VAR . IDENT Type ASSIGN Expression
   12                | VAR . IDENT Type

    IDENT  shift, and go to state 43


State 2

   90 TypeName: INT .

    $default  reduce using rule 90 (TypeName)


State 3

   91 TypeName: FLOAT .

    $default  reduce using rule 91 (TypeName)


State 4

   93 TypeName: BOOL .

    $default  reduce using rule 93 (TypeName)


State 5

   92 TypeName: STRING .

    $default  reduce using rule 92 (TypeName)


State 6

   15 BLOCK: LBRACE . $@1 StatementList $@2 RBRACE

    $default  reduce using rule 13 ($@1)

    $@1  go to state 44


State 7

   83 PrintStmt: PRINT . LPAREN $@19 Expression RPAREN

    LPAREN  shift, and go to state 45


State 8

   85 PrintStmt: PRINTLN . LPAREN $@20 Expression RPAREN

    LPAREN  shift, and go to state 46


State 9

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 10

   66 IfStmt: IF . Condition $@10 FBLOCK
   69       | IF . Condition $@11 FBLOCK ELSE $@12 FBLOCK
   71       | IF . Condition $@13 FBLOCK ELSE IfStmt

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    Expression      go to state 47
    UnaryExpr       go to state 30
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Condition       go to state 48
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 11

   74 Forstmt: FOR . $@14 Formid

    $default  reduce using rule 73 ($@14)

    $@14  go to state 49


State 12

   57 Literal: INT_LIT .

    $default  reduce using rule 57 (Literal)


State 13

   58 Literal: FLOAT_LIT .

    $default  reduce using rule 58 (Literal)


State 14

   59 Literal: STRING_LIT .

    $default  reduce using rule 59 (Literal)


State 15

   56 Operand: IDENT .

    $default  reduce using rule 56 (Operand)


State 16

   60 Literal: BOOL_LIT .

    $default  reduce using rule 60 (Literal)


State 17

   48 UnaryExpr: ADD . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LBRACK      shift, and go to state 21

    UnaryExpr       go to state 50
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 18

   49 UnaryExpr: SUB . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LBRACK      shift, and go to state 21

    UnaryExpr       go to state 51
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 19

   50 UnaryExpr: NOT . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LBRACK      shift, and go to state 21

    UnaryExpr       go to state 52
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 20

   46 Expression: LPAREN . Expression RPAREN

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    Expression      go to state 53
    UnaryExpr       go to state 30
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 21

   94 ArrayType: LBRACK . Expression RBRACK Type

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    Expression      go to state 54
    UnaryExpr       go to state 30
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 55


State 23

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    VAR         shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    LBRACE      shift, and go to state 6
    PRINT       shift, and go to state 7
    PRINTLN     shift, and go to state 8
    NEWLINE     shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    NEWLINE   [reduce using rule 72 (Forstmt)]
    $default  reduce using rule 1 (Program)

    Statement        go to state 56
    DeclarationStmt  go to state 25
    BLOCK            go to state 26
    SimpleStmt       go to state 27
    AssignmentStmt   go to state 28
    Expression       go to state 29
    UnaryExpr        go to state 30
    PrimaryExpr      go to state 31
    IndexExpr        go to state 32
    Operand          go to state 33
    Literal          go to state 34
    ConversionExpr   go to state 35
    IfStmt           go to state 36
    Forstmt          go to state 37
    PrintStmt        go to state 38
    IncDecStmt       go to state 39
    Type             go to state 40
    TypeName         go to state 41
    ArrayType        go to state 42


State 24

    3 StatementList: Statement .
   16              | Statement .

    $end        reduce using rule 3 (StatementList)
    $end        [reduce using rule 16 (StatementList)]
    VAR         reduce using rule 3 (StatementList)
    VAR         [reduce using rule 16 (StatementList)]
    INT         reduce using rule 3 (StatementList)
    INT         [reduce using rule 16 (StatementList)]
    FLOAT       reduce using rule 3 (StatementList)
    FLOAT       [reduce using rule 16 (StatementList)]
    BOOL        reduce using rule 3 (StatementList)
    BOOL        [reduce using rule 16 (StatementList)]
    STRING      reduce using rule 3 (StatementList)
    STRING      [reduce using rule 16 (StatementList)]
    LBRACE      reduce using rule 3 (StatementList)
    LBRACE      [reduce using rule 16 (StatementList)]
    RBRACE      reduce using rule 3 (StatementList)
    RBRACE      [reduce using rule 16 (StatementList)]
    PRINT       reduce using rule 3 (StatementList)
    PRINT       [reduce using rule 16 (StatementList)]
    PRINTLN     reduce using rule 3 (StatementList)
    PRINTLN     [reduce using rule 16 (StatementList)]
    NEWLINE     reduce using rule 3 (StatementList)
    NEWLINE     [reduce using rule 16 (StatementList)]
    IF          reduce using rule 3 (StatementList)
    IF          [reduce using rule 16 (StatementList)]
    FOR         reduce using rule 3 (StatementList)
    FOR         [reduce using rule 16 (StatementList)]
    INT_LIT     reduce using rule 3 (StatementList)
    INT_LIT     [reduce using rule 16 (StatementList)]
    FLOAT_LIT   reduce using rule 3 (StatementList)
    FLOAT_LIT   [reduce using rule 16 (StatementList)]
    STRING_LIT  reduce using rule 3 (StatementList)
    STRING_LIT  [reduce using rule 16 (StatementList)]
    IDENT       reduce using rule 3 (StatementList)
    IDENT       [reduce using rule 16 (StatementList)]
    BOOL_LIT    reduce using rule 3 (StatementList)
    BOOL_LIT    [reduce using rule 16 (StatementList)]
    ADD         reduce using rule 3 (StatementList)
    ADD         [reduce using rule 16 (StatementList)]
    SUB         reduce using rule 3 (StatementList)
    SUB         [reduce using rule 16 (StatementList)]
    NOT         reduce using rule 3 (StatementList)
    NOT         [reduce using rule 16 (StatementList)]
    LPAREN      reduce using rule 3 (StatementList)
    LPAREN      [reduce using rule 16 (StatementList)]
    LBRACK      reduce using rule 3 (StatementList)
    LBRACK      [reduce using rule 16 (StatementList)]
    $default    reduce using rule 3 (StatementList)


State 25

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 57


State 26

    6 Statement: BLOCK . NEWLINE

    NEWLINE  shift, and go to state 58


State 27

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 59


State 28

   19 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 19 (SimpleStmt)


State 29

   17 SimpleStmt: Expression .
   21 AssignmentStmt: Expression . $@3 ASSIGN Expression
   23               | Expression . $@4 ADD_ASSIGN Expression
   25               | Expression . $@5 SUB_ASSIGN Expression
   27               | Expression . $@6 MUL_ASSIGN Expression
   29               | Expression . $@7 QUO_ASSIGN Expression
   31               | Expression . $@8 REM_ASSIGN Expression
   33 Expression: Expression . ADD Expression
   34           | Expression . SUB Expression
   35           | Expression . MUL Expression
   36           | Expression . DIV Expression
   37           | Expression . REMAIN Expression
   38           | Expression . EQL Expression
   39           | Expression . NEQ Expression
   40           | Expression . GTR Expression
   41           | Expression . LSS Expression
   42           | Expression . LEQ Expression
   43           | Expression . GEQ Expression
   44           | Expression . LAND Expression
   45           | Expression . LOR Expression
   86 IncDecStmt: Expression . INC
   87           | Expression . DEC

    INC     shift, and go to state 60
    DEC     shift, and go to state 61
    LOR     shift, and go to state 62
    LAND    shift, and go to state 63
    NEQ     shift, and go to state 64
    LSS     shift, and go to state 65
    LEQ     shift, and go to state 66
    GTR     shift, and go to state 67
    GEQ     shift, and go to state 68
    EQL     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    REMAIN  shift, and go to state 74

    ASSIGN      reduce using rule 20 ($@3)
    ADD_ASSIGN  reduce using rule 22 ($@4)
    SUB_ASSIGN  reduce using rule 24 ($@5)
    MUL_ASSIGN  reduce using rule 26 ($@6)
    QUO_ASSIGN  reduce using rule 28 ($@7)
    REM_ASSIGN  reduce using rule 30 ($@8)
    $default    reduce using rule 17 (SimpleStmt)

    $@3  go to state 75
    $@4  go to state 76
    $@5  go to state 77
    $@6  go to state 78
    $@7  go to state 79
    $@8  go to state 80


State 30

   32 Expression: UnaryExpr .

    $default  reduce using rule 32 (Expression)


State 31

   47 UnaryExpr: PrimaryExpr .
   54 IndexExpr: PrimaryExpr . LBRACK Expression RBRACK

    LBRACK  shift, and go to state 81

    $default  reduce using rule 47 (UnaryExpr)


State 32

   53 PrimaryExpr: IndexExpr .

    $default  reduce using rule 53 (PrimaryExpr)


State 33

   51 PrimaryExpr: Operand .

    $default  reduce using rule 51 (PrimaryExpr)


State 34

   55 Operand: Literal .

    $default  reduce using rule 55 (Operand)


State 35

   52 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 52 (PrimaryExpr)


State 36

    8 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 82


State 37

    9 Statement: Forstmt . NEWLINE

    NEWLINE  shift, and go to state 83


State 38

    7 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 84


State 39

   18 SimpleStmt: IncDecStmt .

    $default  reduce using rule 18 (SimpleStmt)


State 40

   61 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 85


State 41

   88 Type: TypeName .

    $default  reduce using rule 88 (Type)


State 42

   89 Type: ArrayType .

    $default  reduce using rule 89 (Type)


State 43

   11 DeclarationStmt: VAR IDENT . Type ASSIGN Expression
   12                | VAR IDENT . Type

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    LBRACK  shift, and go to state 21

    Type       go to state 86
    TypeName   go to state 41
    ArrayType  go to state 42


State 44

   15 BLOCK: LBRACE $@1 . StatementList $@2 RBRACE

    VAR         shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    LBRACE      shift, and go to state 6
    PRINT       shift, and go to state 7
    PRINTLN     shift, and go to state 8
    NEWLINE     shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    NEWLINE  [reduce using rule 72 (Forstmt)]

    StatementList    go to state 87
    Statement        go to state 24
    DeclarationStmt  go to state 25
    BLOCK            go to state 26
    SimpleStmt       go to state 27
    AssignmentStmt   go to state 28
    Expression       go to state 29
    UnaryExpr        go to state 30
    PrimaryExpr      go to state 31
    IndexExpr        go to state 32
    Operand          go to state 33
    Literal          go to state 34
    ConversionExpr   go to state 35
    IfStmt           go to state 36
    Forstmt          go to state 37
    PrintStmt        go to state 38
    IncDecStmt       go to state 39
    Type             go to state 40
    TypeName         go to state 41
    ArrayType        go to state 42


State 45

   83 PrintStmt: PRINT LPAREN . $@19 Expression RPAREN

    $default  reduce using rule 82 ($@19)

    $@19  go to state 88


State 46

   85 PrintStmt: PRINTLN LPAREN . $@20 Expression RPAREN

    $default  reduce using rule 84 ($@20)

    $@20  go to state 89


State 47

   33 Expression: Expression . ADD Expression
   34           | Expression . SUB Expression
   35           | Expression . MUL Expression
   36           | Expression . DIV Expression
   37           | Expression . REMAIN Expression
   38           | Expression . EQL Expression
   39           | Expression . NEQ Expression
   40           | Expression . GTR Expression
   41           | Expression . LSS Expression
   42           | Expression . LEQ Expression
   43           | Expression . GEQ Expression
   44           | Expression . LAND Expression
   45           | Expression . LOR Expression
   62 Condition: Expression .

    LOR     shift, and go to state 62
    LAND    shift, and go to state 63
    NEQ     shift, and go to state 64
    LSS     shift, and go to state 65
    LEQ     shift, and go to state 66
    GTR     shift, and go to state 67
    GEQ     shift, and go to state 68
    EQL     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    REMAIN  shift, and go to state 74

    $default  reduce using rule 62 (Condition)


State 48

   66 IfStmt: IF Condition . $@10 FBLOCK
   69       | IF Condition . $@11 FBLOCK ELSE $@12 FBLOCK
   71       | IF Condition . $@13 FBLOCK ELSE IfStmt

    LBRACE    reduce using rule 65 ($@10)
    LBRACE    [reduce using rule 67 ($@11)]
    LBRACE    [reduce using rule 70 ($@13)]
    $default  reduce using rule 65 ($@10)

    $@10  go to state 90
    $@11  go to state 91
    $@13  go to state 92


State 49

   74 Forstmt: FOR $@14 . Formid

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    SimpleStmt      go to state 93
    AssignmentStmt  go to state 28
    Expression      go to state 94
    UnaryExpr       go to state 30
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Condition       go to state 95
    Formid          go to state 96
    Forclause       go to state 97
    IncDecStmt      go to state 39
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 50

   48 UnaryExpr: ADD UnaryExpr .

    $default  reduce using rule 48 (UnaryExpr)


State 51

   49 UnaryExpr: SUB UnaryExpr .

    $default  reduce using rule 49 (UnaryExpr)


State 52

   50 UnaryExpr: NOT UnaryExpr .

    $default  reduce using rule 50 (UnaryExpr)


State 53

   33 Expression: Expression . ADD Expression
   34           | Expression . SUB Expression
   35           | Expression . MUL Expression
   36           | Expression . DIV Expression
   37           | Expression . REMAIN Expression
   38           | Expression . EQL Expression
   39           | Expression . NEQ Expression
   40           | Expression . GTR Expression
   41           | Expression . LSS Expression
   42           | Expression . LEQ Expression
   43           | Expression . GEQ Expression
   44           | Expression . LAND Expression
   45           | Expression . LOR Expression
   46           | LPAREN Expression . RPAREN

    LOR     shift, and go to state 62
    LAND    shift, and go to state 63
    NEQ     shift, and go to state 64
    LSS     shift, and go to state 65
    LEQ     shift, and go to state 66
    GTR     shift, and go to state 67
    GEQ     shift, and go to state 68
    EQL     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    REMAIN  shift, and go to state 74
    RPAREN  shift, and go to state 98


State 54

   33 Expression: Expression . ADD Expression
   34           | Expression . SUB Expression
   35           | Expression . MUL Expression
   36           | Expression . DIV Expression
   37           | Expression . REMAIN Expression
   38           | Expression . EQL Expression
   39           | Expression . NEQ Expression
   40           | Expression . GTR Expression
   41           | Expression . LSS Expression
   42           | Expression . LEQ Expression
   43           | Expression . GEQ Expression
   44           | Expression . LAND Expression
   45           | Expression . LOR Expression
   94 ArrayType: LBRACK Expression . RBRACK Type

    LOR     shift, and go to state 62
    LAND    shift, and go to state 63
    NEQ     shift, and go to state 64
    LSS     shift, and go to state 65
    LEQ     shift, and go to state 66
    GTR     shift, and go to state 67
    GEQ     shift, and go to state 68
    EQL     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    REMAIN  shift, and go to state 74
    RBRACK  shift, and go to state 99


State 55

    0 $accept: Program $end .

    $default  accept


State 56

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 57

    4 Statement: DeclarationStmt NEWLINE .

    $default  reduce using rule 4 (Statement)


State 58

    6 Statement: BLOCK NEWLINE .

    $default  reduce using rule 6 (Statement)


State 59

    5 Statement: SimpleStmt NEWLINE .

    $default  reduce using rule 5 (Statement)


State 60

   86 IncDecStmt: Expression INC .

    $default  reduce using rule 86 (IncDecStmt)


State 61

   87 IncDecStmt: Expression DEC .

    $default  reduce using rule 87 (IncDecStmt)


State 62

   45 Expression: Expression LOR . Expression

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    INT_LIT     shift, and go to state 12
    FLOAT_LIT   shift, and go to state 13
    STRING_LIT  shift, and go to state 14
    IDENT       shift, and go to state 15
    BOOL_LIT    shift, and go to state 16
    ADD         shift, and go to state 17
    SUB         shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 20
    LBRACK      shift, and go to state 21

    Expression      go to state 100
    UnaryExpr       go to state 30
    PrimaryExpr     go to state 31
    IndexExpr       go to state 32
    Operand         go to state 33
    Literal         go to state 34
    ConversionExpr  go to state 35
    Type            go to state 40
    TypeName        go to state 41
    ArrayType       go to state 42


State 63

   44 Expression: Expression LAND . Expression
